<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".HraActivity" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/basicText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/basicIncome"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/basic"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/houseRentPaidText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/houseRentPaid"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/houseRentPaid"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/textborder"
                android:gravity="center"
                android:hint="@string/yearly"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:maxLength="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/hraReceivedText"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/hraReceived"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/hraReceived"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/textborder"
                android:gravity="center"
                android:hint="@string/yearly"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:maxLength="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/residentText"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/resident"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <RadioGroup
                android:id="@+id/residence"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/metroRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/metro"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <RadioButton
                    android:id="@+id/nonMetroRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/nonMetro"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/hraText2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/hra2"
                android:textColor="@color/red"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hra2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:textColor="@color/red"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/okHra"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttonselector"
                android:onClick="calculateHra"
                android:text="@string/calculate"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <Button
                android:id="@+id/copy"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttonselector"
                android:onClick="copy"
                android:text="@string/copy"
                android:textColor="@color/black"
                android:textSize="13sp" />
        </LinearLayout>
    </TableLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true" >

        <com.google.ads.AdView
            android:id="@+id/adHra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="a151ceab37f2e42"
            ads:loadAdOnCreate="true" />
    </LinearLayout>

</RelativeLayout>